fix on h1 overlapping fixed minor language errors

--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@
 	.carousel-caption {
 		left: 15px;
 		right: 15px;
-		top: 50%;
+		top: 45%;
 		font-size: 15px;
 		text-align: left;
 		color: #515151;
@@ -268,9 +268,9 @@
 	}
 
 	.carousel-caption h1 {
-		font-size:46px;
+		font-size:42px;
 		margin-bottom:0;
-		line-height:27px;
+		/* line-height:27px; */
 		letter-spacing:2px;
 		font-weight:100;
 	}
@@ -520,7 +520,8 @@
 
 	.st-pricing{
 		background-color: #fff;
-		padding: 40px;
+		padding: 20px;
+		margin-top: 30px;
 		-webkit-transition: all 0.2s ease-in-out;
 		-moz-transition: all 0.2s ease-in-out;
 		-ms-transition: all 0.2s ease-in-out;
@@ -560,7 +561,8 @@
 
 	.st-pricing a.btn-send{
 		text-transform: uppercase;
-		margin-top: 20px;
+		margin-top: 5px;
+		margin-bottom: 5px;
 		padding: 10px 25px;
 	}
 
